Add visual regression workflow to CI pipeline
Introduces a new GitHub Actions workflow for visual regression testing using Playwright and Storybook. Integrates the visual regression job into the main CI workflow, updates the reporting workflow to include visual regression results, and adds corresponding output to the Jenkinsfile test summary. This enhances automated UI testing and reporting for visual changes.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -95,9 +95,21 @@ jobs:
       skip-integration-tests: ${{ github.event.inputs.skip_integration_tests == 'true' }}
       skip-snapshot-tests: ${{ github.event.inputs.skip_snapshot_tests == 'true' }}
       
+    visual-regression:
+      name: 👁️ Visual Regression
+      needs: [setup, lint]
+      if: always()
+      uses: ./.github/workflows/visual-regression.yml
+      with:
+        node-version: '18'
+        skip-visual-tests: false
+        playwright-workers: '1'
+        playwright-browsers: ${{ github.event.inputs.playwright_browsers || 'all' }}
+        update-snapshots: false
+        
   performance:
     name: ⚡ Performance & E2E
-    needs: [setup, lint, test]
+    needs: [setup, lint, test, visual-regression]
     if: always()
     uses: ./.github/workflows/performance.yml
     with:
@@ -111,7 +123,7 @@ jobs:
       
   report:
     name: 📊 Test Summary & Reporting
-    needs: [setup, lint, test, performance]
+    needs: [setup, lint, test, visual-regression, performance]
     if: always()
     uses: ./.github/workflows/report.yml
     with:
@@ -119,6 +131,7 @@ jobs:
       setup-result: ${{ needs.setup.result }}
       lint-result: ${{ needs.lint.result }}
       test-result: ${{ needs.test.result }}
+      visual-regression-result: ${{ needs.visual-regression.result }}
       performance-result: ${{ needs.performance.result }}
     secrets:
       slack-webhook-url: ${{ secrets.SLACK_WEBHOOK_URL }}
