--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -68,6 +68,10 @@ on:
         default: '2'
         type: string
 
+permissions:
+  contents: write
+  pull-requests: write
+
 env:
   NODE_VERSION: '18'
   
