--- a/.github/workflows/visual-regression.yml
+++ b/.github/workflows/visual-regression.yml
@@ -98,6 +98,20 @@ jobs:
             npm run test:visual
           fi
           
+      - name: 🛠️ Install GitHub CLI
+        if: ${{ inputs.update-snapshots == true }}
+        run: |
+          if ! command -v gh &> /dev/null; then
+            echo "📦 Installing GitHub CLI..."
+            curl -fsSL https://cli.github.com/packages/githubcli-archive-keyring.gpg | sudo dd of=/usr/share/keyrings/githubcli-archive-keyring.gpg
+            echo "deb [arch=$(dpkg --print-architecture) signed-by=/usr/share/keyrings/githubcli-archive-keyring.gpg] https://cli.github.com/packages stable main" | sudo tee /etc/apt/sources.list.d/github-cli.list > /dev/null
+            sudo apt update
+            sudo apt install gh -y
+          else
+            echo "✅ GitHub CLI already installed"
+          fi
+          gh --version
+          
       - name: 📝 Commit Updated Snapshots
         if: ${{ inputs.update-snapshots == true }}
         env:
@@ -155,7 +169,7 @@ jobs:
 
             > **Note:** These snapshots were automatically generated. Please ensure all visual changes are intentional before merging." \
               --head "$BRANCH_NAME" \
-              --base "${{ github.ref_name }}"
+              --base "${GITHUB_REF#refs/heads/}"
             
             echo "✅ Pull Request created successfully!"
           fi
