--- a/.github/actions/setup-test-env/action.yml
+++ b/.github/actions/setup-test-env/action.yml
@@ -53,4 +53,6 @@ runs:
       if: inputs.include-playwright == 'true' && steps.cache-deps.outputs.cache-hit != 'true'
       shell: bash
       working-directory: frontend
-      run: npx playwright install 
+      run: |
+        npx playwright install
+        npx playwright install-deps 
