Switch Storybook Docker image to Playwright base
Update Dockerfile.storybook to use mcr.microsoft.com/playwright:v1.48.0-jammy for all stages, replacing node:20-alpine. Also update package installation commands to use apt-get instead of apk. In the GitHub Actions setup-test-env, remove redundant 'npx playwright install' and only run 'npx playwright install-deps'.

--- a/.github/actions/setup-test-env/action.yml
+++ b/.github/actions/setup-test-env/action.yml
@@ -53,6 +53,4 @@ runs:
       if: inputs.include-playwright == 'true' && steps.cache-deps.outputs.cache-hit != 'true'
       shell: bash
       working-directory: frontend
-      run: |
-        npx playwright install
-        npx playwright install-deps 
+      run: npx playwright install-deps 
