--- a/.github/actions/setup-test-env/action.yml
+++ b/.github/actions/setup-test-env/action.yml
@@ -49,8 +49,10 @@ runs:
       working-directory: backend
       run: npm ci
 
-    - name: 🎭 Install Playwright Browsers
+    - name: 🎭 Install Playwright Browsers & Dependencies
       if: inputs.include-playwright == 'true' && steps.cache-deps.outputs.cache-hit != 'true'
       shell: bash
       working-directory: frontend
-      run: npx playwright install-deps 
+      run: |
+        npx playwright install
+        sudo npx playwright install-deps 
